Anonymous | Login | 2021-01-17 00:16 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0030686 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-05-01 12:29 | 2019-05-08 13:41 | ||||
Reporter | kgv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | trivial | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 7.3.0 | ||||||||
Target Version | [OCCT] 7.4.0 | Fixed in Version | [OCCT] 7.4.0 | ||||||
Summary | 0030686: Visualization, SelectMgr_ViewerSelector - sorting issues of transformation-persistent objects | ||||||||
Description | SelectMgr_ViewerSelector relies on the Depth from Eye for sorting picking results. The comparison for depth equality is done with computed Tolerance, which does not consider distance from camera Eye being negative, which might actually happen in case of transformation-persistent presentations (Graphic3d_TMF_2d first of all). | ||||||||
Steps To Reproduce | N/A | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not required | ||||||||
Attached Files | |||||||||
![]() |
||||||
|
![]() |
|
(0084088) git (administrator) 2019-05-01 12:35 |
Branch CR30686 has been created by kgv. SHA-1: 62e87f97623c36d1962ec9b1353c8895fa0a4d03 Detailed log of new commits: Author: kgv Date: Wed May 1 12:24:35 2019 +0300 0030686: Visualization, SelectMgr_ViewerSelector - sorting issues of transformation-persistent objects SelectMgr_ViewerSelector::updatePoint3d() - added missing Abs() for computed tolerance and added check to not attempt transforming undefined 3D point. |
(0084090) kgv (developer) 2019-05-01 14:22 |
Please raise the patch. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR30686-master-KGV/ [^] |
(0084247) git (administrator) 2019-05-08 13:41 |
Branch CR30686 has been deleted by inv. SHA-1: 62e87f97623c36d1962ec9b1353c8895fa0a4d03 |
![]() |
|||
occt: master b44bf0f8
Timestamp: 2019-05-01 09:24:35 Author: kgv Committer: bugmaster [ Details ] [ Diff ] |
0030686: Visualization, SelectMgr_ViewerSelector - sorting issues of transformation-persistent objects SelectMgr_ViewerSelector::updatePoint3d() - added missing Abs() for computed tolerance and added check to not attempt transforming undefined 3D point. |
||
mod - src/SelectMgr/SelectMgr_ViewerSelector.cxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2019-05-01 12:29 | kgv | New Issue | |
2019-05-01 12:29 | kgv | Assigned To | => kgv |
2019-05-01 12:29 | kgv | Summary | 0030484: Visualization, SelectMgr_ViewerSelector - sorting issues of transformation-persistent objects => Visualization, SelectMgr_ViewerSelector - sorting issues of transformation-persistent objects |
2019-05-01 12:29 | kgv | Relationship added | related to 0030484 |
2019-05-01 12:35 | git | Note Added: 0084088 | |
2019-05-01 14:22 | kgv | Note Added: 0084090 | |
2019-05-01 14:22 | kgv | Assigned To | kgv => bugmaster |
2019-05-01 14:22 | kgv | Severity | minor => trivial |
2019-05-01 14:22 | kgv | Status | new => resolved |
2019-05-01 14:22 | kgv | Status | resolved => reviewed |
2019-05-01 19:09 | bugmaster | Status | reviewed => tested |
2019-05-01 19:09 | bugmaster | Test case number | => Not required |
2019-05-08 12:38 | bugmaster | Changeset attached | => occt master b44bf0f8 |
2019-05-08 12:38 | bugmaster | Status | tested => verified |
2019-05-08 12:38 | bugmaster | Resolution | open => fixed |
2019-05-08 13:41 | git | Note Added: 0084247 |
Copyright © 2000 - 2021 MantisBT Team |