0030686: Visualization, SelectMgr_ViewerSelector - sorting issues of transformation-persistent objects

SelectMgr_ViewerSelector::updatePoint3d() - added missing Abs() for computed tolerance
and added check to not attempt transforming undefined 3D point.